# selva-agreement-metrics

./: .gitignore  .tmuxinator.yml  README.md
llm-agreement-metrics/: pyproject.toml
llm-agreement-metrics/llm_agreement_metrics/: __init__.py  dataset.py  metrics.py  models.py
selva-agreement-clients/poetry-client/: .Rhistory  _top_k_analysis.py  analytics.py  batch_process.sh  bernardo_analysis.Rmd  bernardo_analysisJuly2_16h52.Rmd  bernardo_analysisJune1915h45.Rmd  client.py  data_validation.py  dataset.json  distribution_plot.py  kl_matrix.py  mistakes_examples  mkdocs.yml  pyproject.toml  requirements.txt  resplit_efcamdat_train.py  results-per-cefr  sent_tokenize.py  top_k_analysis.py  utils.py  visualisations.py
selva-agreement-clients/poetry-client/docs/: index.md  logs.md
selva-agreement-clients/poetry-client/results/: confusion_matrix_CELVA_bert-base-uncased.json  confusion_matrix_CELVA_mosaic-bert-base.json  confusion_matrix_CELVA_roberta-base.json  top_k  top_k_count_CELVA_bert-base-uncased.json  top_k_count_CELVA_mosaic-bert-base.json  top_k_count_CELVA_roberta-base.json  top_k_count_EFCAMDAT_roberta-base.json  top_k_count_EFCAMDAT_test_bert-base-uncased.json  top_k_count_bert-base-uncased-efcamdat-test.json  top_k_count_mosaic-bert-base.json  top_k_count_roberta-base.json  top_k_proportions_CELVA_bert-base-uncased.json  top_k_proportions_CELVA_mosaic-bert-base.json  top_k_proportions_CELVA_roberta-base.json  top_k_proportions_EFCAMDAT_roberta-base.json  top_k_proportions_EFCAMDAT_test_bert-base-uncased.json  top_k_proportions_bert-base-uncased.json  (+2 more)
(+11 files in other folders)
