[tool.poetry]
name = "llm-agreement-metrics"
version = "0.1.0"
description = ""
authors = ["bernardo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.2.0"
transformers = "^4.37.2"
torch = "^2.2.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
