[tool.poetry]
name = "poetry-client"
version = "0.1.0"
description = ""
authors = ["bernardo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llm-agreement-metrics = {path = "../../llm-agreement-metrics"}
jupyter = "^1.0.0"
plotext = "^5.2.8"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
termcolor = "^2.4.0"
pydantic = "^2.7.4"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
